# platform_external_zlib

./: .copybara  Android.bp  Android.mk  BUILD  BUILD.bazel  BUILD.gn  Blueprints  CMakeLists.txt  LICENSE  METADATA  MODULE.bazel  Makefile  OWNERS  TEST_MAPPING  WORKSPACE  cpu_features.c  crc_folding.c  deflate.c  gzio.c  inflate.c  libz.map.txt  zconf.h  zlib.h  zutil.h
contrib/bench/: zlib_bench.cc
contrib/masmx86/: inffas32.asm  inffas32.lst  match686.lst
contrib/minizip/: Makefile
contrib/optimizations/: chunkcopy.h  inflate.c
contrib/tests/: infcover.cc  utils_unittest.cc
contrib/untgz/: Makefile
contrib/vstudio/vc7/: miniunz.vcproj  minizip.vcproj  testzlib.vcproj  zlibvc.vcproj
contrib/vstudio/vc8/: miniunz.vcproj  minizip.vcproj  testzlib.vcproj  testzlibdll.vcproj  zlibstat.vcproj  zlibvc.vcproj
contrib/vstudio/vc9/: zlibstat.vcproj
google/: BUILD.gn
patches/: 0003-uninitializedjump.patch  0005-infcover-gtest.patch
projects/vs2008/: zlib-wince.vcproj  zlib.sln  zlib.vcproj  zlibstatic.vcproj
