module(
    name = "zlib",
    version = "1.3.0.1",
    compatibility_level = 1,
)
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cc", version = "0.1.0")
bazel_dep(name = "googletest", version = "1.15.2", repo_name = "com_google_googletest")
